crates/data-dict/tests/snapshots/validate_spec__s07_enum_without_values.snap
---
source: crates/data-dict/tests/validate_spec.rs
assertion_line: 335
expression: "failing_diagnostic(\"spec/s07-enum-without-values.yaml\")"
---
Error: [S07]
    ╭─[ spec/s07-enum-without-values.yaml:10:15 ]
    │
 10 │       - name: c
    │               ┬  
    │               ╰── column `t.c` has type `enum` but is missing the required `values` property
────╯
